--- a/polikarbonat/index.html
+++ b/polikarbonat/index.html
@@ -28,7 +28,7 @@
             </picture>
 
             <ul class="nav_items">
-                <li class="nav_item"><a href="/index.html">Главная</a></li>
+                <li class="nav_item"><a href="/index.html"></a>Главная</li>
                 <li class="nav_item">Каталог
                     <ul class="catalog_list_menu">
                         <li><a href="/teplicy" class="nav_item">Теплицы</a></li>
@@ -37,7 +37,7 @@
                 </li>
                 <li class="nav_item">О нас</li>
                 <li class="nav_item">Контакты</li>
-                <li class="nav_item call">Позвонить</li>
+                <li href="#popup:stepform_Z8xLZU8_1460872188" class="nav_item call">Заказ звонка</li>
             </ul>
             <div class="menu">
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
@@ -46,7 +46,13 @@
                     <li><a href="/index.html" class="menu-item">Главная</a></li>
                     <li><a href="#" class="menu-item">О нас</a></li>
                     <li><a href="#" class="menu-item">Контакты</a></li>
-                    <li><a href="#" class="menu-item">Позвонить</a></li>
+                    <li class="menu-item-list">Связь
+                        <ul>
+                            <li><a href="#" class="menu-item">Позвонить</a></li>
+                    <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item">Заказ звонка</li>
+                        </ul>
+                    </li>
+                    
                     <li class="menu-item-list">Каталог
                         <ul>
                             <li><a class="menu-item" href="/teplicy">Теплицы</a></li>
@@ -147,6 +153,22 @@
     <script src="/scripts/catalog.js"></script>
     <script>
         loadProducts('engineering')
+    </script>
+    <script class="stepform_Z8xLZU8 rnd_1460872188">
+        (function(s, t, e, p, f, o, r, m) {
+            s[t] = s[t] || {};
+            s[t][1460872188] = {
+                id: "Z8xLZU8",
+                rnd: 1460872188,
+                popup: true,
+                showType: "button",
+                overlayColor: "#000000",
+                overlayOpacity: 30
+            };
+            e.async = true;
+            e.src = p + f;
+            document[m](o)[r](e)
+        }(window,"stepFORM_params",document.createElement("script"),document.location.protocol==="https:"?"https:":"http:","//u052171.stepform.io/api.js?id=Z8xLZU8","head","appendChild","querySelector"));
     </script>
 </body>
 </html>
