--- a/teplicy/index.html
+++ b/teplicy/index.html
@@ -30,7 +30,7 @@
             </picture>
 
             <ul class="nav_items">
-                <li class="nav_item"><a href="/index.html"></a>Главная</li>
+                <li class="nav_item"><a href="index.html">Главная</a></li>
                 <li class="nav_item">Каталог
                     <ul class="catalog_list_menu">
                         <li><a href="/teplicy" class="nav_item">Теплицы</a></li>
