--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                         </clipPath>
                         </defs>
                         </svg>
-                    <p><a href="tel:+79872165566">+7(987)-216-55-66</a></p>
-                    <p><a href="tel:+79196897195">+7(919)-689-71-95</a></p>
+                    <p><span>Номер: </span><a href="tel:+79872165566">+7(987)-216-55-66</a></p>
+                    <p><span>Номер: </span><a href="tel:+79196897195">+7(919)-689-71-95</a></p>
                 </div>
-                <div class="contact_item">
+                <div class="contact_item email">
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_1_188)">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M21.4163 8.87562L12.4163 2.87562C12.1642 2.70748 11.8358 2.70748 11.5837 2.87562L2.58375 8.87562C2.37509 9.01484 2.24984 9.24916 2.25 9.5V19.25C2.25 20.0784 2.92157 20.75 3.75 20.75H20.25C21.0784 20.75 21.75 20.0784 21.75 19.25V9.5C21.7502 9.24916 21.6249 9.01484 21.4163 8.87562ZM9.0675 14.75L3.75 18.5V10.9559L9.0675 14.75ZM10.6022 15.5H13.3978L18.7069 19.25H5.29313L10.6022 15.5ZM14.9325 14.75L20.25 10.9559V18.5L14.9325 14.75ZM12 4.40094L19.6791 9.52063L13.3978 14H10.6041L4.32281 9.52063L12 4.40094Z" fill="#ffffff"/>
@@ -152,6 +152,7 @@
                         </clipPath>
                         </defs>
                         </svg>
+                        <p><span>E-mail: </span><a href="mailto:9641857200@mail.ru">9641857200@mail.ru</a></p>
                 </div>
             </div>
             <span class="copyright">2024 ® ООО "ЮГРА-ПЛАСТ" г.Казань</span>
