--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
             </picture>
 
             <ul class="nav_items">
-                <li class="nav_item"><a href="/index.html"></a>Главная</li>
-                <li class="nav_item">Каталог
+                <li class="nav_item"><a href="/index.html" ontouchstart></a>Главная</li>
+                <li class="nav_item" ontouchstart>Каталог
                     <ul class="catalog_list_menu">
-                        <li><a href="/teplicy" class="nav_item">Теплицы</a></li>
-                        <li><a href="/polikarbonat/" class="nav_item">Поликарбонат</a></li>
+                        <li><a href="/teplicy" class="nav_item" ontouchstart>Теплицы</a></li>
+                        <li><a href="/polikarbonat/" class="nav_item" ontouchstart>Поликарбонат</a></li>
                     </ul>
                 </li>
                 <li class="nav_item">О нас</li>
                 <li class="nav_item">Контакты</li>
-                <li href="#popup:stepform_Z8xLZU8_1460872188" class="nav_item call">Заявка</li>
+                <li href="#popup:stepform_Z8xLZU8_1460872188" class="nav_item call" ontouchstart>Заявка</li>
             </ul>
             <div class="menu">
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
-                    <li><a href="/index.html" class="menu-item">Главная</a></li>
-                    <li><a href="#" class="menu-item">О нас</a></li>
-                    <li><a href="#" class="menu-item">Контакты</a></li>
+                    <li><a href="/index.html" class="menu-item" ontouchstart>Главная</a></li>
+                    <li><a href="#" class="menu-item" ontouchstart>О нас</a></li>
+                    <li><a href="#" class="menu-item" ontouchstart>Контакты</a></li>
                     <li class="menu-item-list">Связь
                         <ul>
-                            <li><a href="#" class="menu-item">Позвонить</a></li>
-                            <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item">Заказ звонка</li>
+                            <li><a href="#" class="menu-item" ontouchstart>Позвонить</a></li>
+                            <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item" ontouchstart>Заказ звонка</li>
                         </ul>
                     </li>
 
                     <li class="menu-item-list">Каталог
                         <ul>
-                            <li><a class="menu-item" href="/teplicy">Теплицы</a></li>
-                            <li><a class="menu-item" href="/polikarbonat/">Поликарбонат</a></li>
+                            <li><a class="menu-item" href="/teplicy" ontouchstart>Теплицы</a></li>
+                            <li><a class="menu-item" href="/polikarbonat/" ontouchstart>Поликарбонат</a></li>
                         </ul>
                     </li>
                 </ul>
