--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </picture>
 
             <ul class="nav_items">
-                <li class="nav_item"><a href="/index.html" ontouchstart></a>Главная</li>
+                <li class="nav_item"><a href="/" ontouchstart>Главная</a></li>
                 <li class="nav_item" ontouchstart>Каталог
                     <ul class="catalog_list_menu">
-                        <li><a href="/teplicy" class="nav_item" ontouchstart>Теплицы</a></li>
-                        <li><a href="/polikarbonat/" class="nav_item" ontouchstart>Поликарбонат</a></li>
+                        <li><a href="/teplicy">Теплицы</a></li>
+                        <li><a href="/polikarbonat">Поликарбонат</a></li>
                     </ul>
                 </li>
                 <li class="nav_item">О нас</li>
@@ -46,12 +46,13 @@
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
-                    <li><a href="/index.html" class="menu-item" ontouchstart>Главная</a></li>
+                    <li><a href="/" class="menu-item" ontouchstart>Главная</a></li>
                     <li><a href="#" class="menu-item" ontouchstart>О нас</a></li>
                     <li><a href="#" class="menu-item" ontouchstart>Контакты</a></li>
                     <li class="menu-item-list">Связь
                         <ul>
-                            <li><a href="#" class="menu-item" ontouchstart>Позвонить</a></li>
+                            <li><a href="tel:+79872165566" class="menu-item" ontouchstart>+7(987)-216-55-66</a></li>
+                            <li><a href="tel:+79196897195" class="menu-item" ontouchstart>+7(919)-689-71-95</a></li>
                             <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item" ontouchstart>Заказ звонка</li>
                         </ul>
                     </li>
