--- a/polikarbonat/index.html
+++ b/polikarbonat/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -15,9 +15,9 @@
         <meta name="yandex-verification" content="38031daddbbb4099" />
         <meta name="google-site-verification" content="s3sPjwoT69_iohUeaNpCLD8QosVs_h5PVvmmCUOs0jo" />
         <meta name="description"
-            content="Компания Югра-ПЛАСТ предлагает большой выбор теплиц, парников и поликарбоната в Казани от производителяю Оптом и в розницу! Мы официальный представитель завода «POLIGI». Представитель компании “Солнышко Вятки”.  Доставка и установка по городу и области с гарантией и в срок." />
+            content="Компания Югра-ПЛАСТ предлагает большой выбор поликарбоната в Казани от производителяю Оптом и в розницу! Мы официальный представитель завода «POLIGI». Представитель компании “Солнышко Вятки”.  Доставка и установка по городу и области с гарантией и в срок." />
         <meta name="keywords"
-            content="купить теплицу, теплицы из поликарбоната, теплица цена, теплицы от производителя, лучшие теплицы, теплицы отзывы, завод теплиц, теплицы недорого, найти теплицы, размеры теплиц, каркас теплицы, теплица дачная, сайт теплицы, длина теплицы, грядки в теплице, правильная теплица, какая теплица лучше, теплицы в области, теплица капелька, прямостенная теплица, купить поликарбонат, поликарбонат от производителя, поликарбонат прозрачный, поликарбонат сотовый, сотовый поликарбонат, монолитный поликарбонат, каркасы теплиц, поликарбонат цветной, поликарбонат коричневый, поликарбонат красный">
+            content="купить поликарбонат, поликарбонат от производителя, поликарбонат прозрачный, поликарбонат сотовый, сотовый поликарбонат, монолитный поликарбонат, каркасы теплиц, поликарбонат цветной, поликарбонат коричневый, поликарбонат красный">
         <meta name="country" content="RU">
     </head>
 <body>
@@ -35,8 +35,8 @@
                         <li><a href="/polikarbonat">Поликарбонат</a></li>
                     </ul>
                 </li>
-                <li class="nav_item">О нас</li>
-                <li class="nav_item">Контакты</li>
+                <li class="nav_item" ontouchstart><a href="/about">О нас</a></li>
+                <li class="nav_item"><a href="/contacts">Контакты</a></li>
                 <li href="#popup:stepform_Z8xLZU8_1460872188" class="nav_item call" ontouchstart>Заявка</li>
             </ul>
             <div class="menu">
@@ -44,8 +44,8 @@
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
                     <li><a href="/" class="menu-item" ontouchstart>Главная</a></li>
-                    <li><a href="#" class="menu-item" ontouchstart>О нас</a></li>
-                    <li><a href="#" class="menu-item" ontouchstart>Контакты</a></li>
+                    <li><a href="/about" class="menu-item" ontouchstart>О нас</a></li>
+                    <li><a href="/contacts" class="menu-item" ontouchstart>Контакты</a></li>
                     <li class="menu-item-list">Связь
                         <ul>
                             <li><a href="tel:+79872165566" class="menu-item" ontouchstart>+7(987)-216-55-66</a></li>
