--- a/index.html
+++ b/index.html
@@ -23,11 +23,27 @@
 </head>
 
 <body>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(94861193, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/94861193" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
 
     <header>
         <nav>
             <picture class="nav_logo">
-                <img src="img/logo.png" alt="Лого компании">
+                <img src="/img/logo.png" alt="Лого компании">
             </picture>
 
             <ul class="nav_items">
@@ -38,8 +54,8 @@
                         <li><a href="/polikarbonat">Поликарбонат</a></li>
                     </ul>
                 </li>
-                <li class="nav_item">О нас</li>
-                <li class="nav_item">Контакты</li>
+                <li class="nav_item" ontouchstart><a href="/about">О нас</a></li>
+                <li class="nav_item"><a href="/contacts">Контакты</a></li>
                 <li href="#popup:stepform_Z8xLZU8_1460872188" class="nav_item call" ontouchstart>Заявка</li>
             </ul>
             <div class="menu">
@@ -47,8 +63,8 @@
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
                     <li><a href="/" class="menu-item" ontouchstart>Главная</a></li>
-                    <li><a href="#" class="menu-item" ontouchstart>О нас</a></li>
-                    <li><a href="#" class="menu-item" ontouchstart>Контакты</a></li>
+                    <li><a href="/about" class="menu-item" ontouchstart>О нас</a></li>
+                    <li><a href="/contacts" class="menu-item" ontouchstart>Контакты</a></li>
                     <li class="menu-item-list">Связь
                         <ul>
                             <li><a href="tel:+79872165566" class="menu-item" ontouchstart>+7(987)-216-55-66</a></li>
