add section why

--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
 
 <body>
     <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();
-    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
- 
-    ym(94861193, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true
-    });
- </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/94861193" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- <!-- /Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(94861193, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/94861193" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 
     <header>
         <nav>
@@ -69,7 +73,8 @@
                         <ul>
                             <li><a href="tel:+79872165566" class="menu-item" ontouchstart>+7(987)-216-55-66</a></li>
                             <li><a href="tel:+79196897195" class="menu-item" ontouchstart>+7(919)-689-71-95</a></li>
-                            <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item" ontouchstart>Заказ звонка</li>
+                            <li href="#popup:stepform_Z8xLZU8_1460872188" class="menu-item" ontouchstart>Заказ звонка
+                            </li>
                         </ul>
                     </li>
 
@@ -103,7 +108,7 @@
             </div>
         </div>
 
-        <article class="catalog_article">
+        <article class="article catalog_article">
             <h2>Каталог</h2>
             <div class="wrapper_catalog_items">
 
@@ -117,7 +122,76 @@
 
             </div>
         </article>
-
+        <article class="article mhy">
+            <h2>Почему нужно выбрать нас?</h2>
+            <div class="why_items">
+                <div class="why_item">
+                    <h3 class="why_title select">БЕЗОПАСНЫЙ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</h3>
+                    <p class="why_desc select">
+                        Мы <b>не используем</b> вторичное сырье с полигонов промышленных отходов
+                        для
+                        удешевления продукции, поэтому овощи, выращенные в теплицах, покрытых нашим поликарбонатом,
+                        будут полностью экологически чистые, а находиться внутри и дышать в таких теплицах будет
+                        абсолютно безопасно для людей.
+                        <br>
+                        <br>
+                        Что может быть важнее собственного здоровья и здоровья близких людей?
+                    </p>
+                </div>
+                <div class="why_item">
+                    <h3 class="why_title">КАЧЕСТВЕННЫЙ</h3>
+                    <p class="why_desc">
+                        <b>Мы дорожим своим именем</b>, поэтому принципиально отказались от использования добавок ПЭТ
+                        для
+                        удешевления продукции, т.к. молекулы ПЭТ не способны удерживать углекислый газ в теплице,
+                        соответственно в теплице не будет создан парниковый эффект для созревания овощей.
+                        <br>
+                        <br>
+                        <b>Для нас важно</b>, что бы ваша теплица была практичной и максимально использовала свой
+                        потенциал для
+                        созревания урожая, а не просто красовалась на участке как дорогая игрушка, неспособная создать
+                        идеальные климатические условия для созревания ваших овощей.
+                    </p>
+                </div>
+                <div class="why_item">
+                    <h3 class="why_title">ДОЛГОВЕЧНЫЙ</h3>
+                    <p class="why_desc">
+                        Абсолютно <b>все листы имеют защитный слой от вредного УФ-излучения</b>, благодаря чему
+                        увеличивается
+                        срок службы наших листов.
+                        <br>
+                        <br>
+                        Каждый покупатель продукции завода «Полиджи» может подобрать листы под свой бюджет, т.к. мы
+                        производим более 20 видов листов – от недорогих легковесных до премиальных тяжелых листов по
+                        ГОСТ Р 56712-2015, <b>срок службы которых 20 лет за счет утолщенного слоя УФ-защиты.</b>
+                    </p>
+                </div>
+                <div class="why_item">
+                    <h3 class="why_title">СЕРТИФИЦИРОВАННЫЙ</h3>
+                    <p class="why_desc">
+                        <b>На всю продукцию завода «Полиджи» получены сертификаты соответствия</b>, подтверждающие
+                        соответствие
+                        листов нормативным требованиям, в том числе по плотности и толщине защитного слоя от
+                        УФ-излучения.
+                        <br>
+                        <br>
+                        Это <b>безопасность и качество</b> листов, которые подтверждены независимой лабораторией, а не
+                        безликие
+                        «ноу неймы».
+                    </p>
+                </div>
+                <div class="why_item">
+                    <h3 class="why_title">ЗАЩИЩЕННЫЙ ГАРАНТИЕЙ ЗАВОДА</h3>
+                    <p class="why_desc">
+                        На торцы <b>всех листов завода «Полиджи» наносится нестираемая лазерная гравировка</b>, благодаря
+                        которой отдел качества может отследить все этапы производства листов.
+                        <br>
+                        <br>
+                        Это позволяет дополнительно <b>гарантировать</b> качество нашей продукции.
+                    </p>
+                </div>
+            </div>
+        </article>
 
     </main>
     <footer>
