--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ЮГРА-Пласт Информация
         </title>
         <link rel="stylesheet" href="/style.css">
@@ -65,7 +65,7 @@
     <main>
         <div class="container-main page_about">
             <div class="company_contacts">
-                <ul> <h3>Наши партнеры в других городах:</h3>
+                <ul> <h3>Наши филиалы в других городах:</h3>
                    <li><span>Пермь</span> <br>Светлогорская 12б <br><a href="tel:+79292330050">+7(929)233-00-50</a></li>
                    <li><span>Ижевск</span><br> Воткинское шоссе 168А <br><a href="tel:+79641829829">+7(964)182-98-29</a></li>
                    <li><span>Нефтекамск</span> <br>Трактовая 14а  <br><a href="tel:+79635418968">+7(963)541-89-68</a></li>
