--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЮГРА-Пласт в Казани, купить теплицу из поликарбоната | Купить поликарбонат от производителя оптом и в розницу
     </title>
     <link rel="stylesheet" href="style.css">
