--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЮГРА-Пласт в Казани, купить теплицу из поликарбоната | Купить поликарбонат от производителя оптом и в розницу
     </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?ver=3">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" sizes="120x120" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -20,9 +20,17 @@
     <meta name="keywords"
         content="купить теплицу, теплицы из поликарбоната, теплица цена, теплицы от производителя, лучшие теплицы, теплицы отзывы, завод теплиц, теплицы недорого, найти теплицы, размеры теплиц, каркас теплицы, теплица дачная, сайт теплицы, длина теплицы, грядки в теплице, правильная теплица, какая теплица лучше, теплицы в области, теплица капелька, прямостенная теплица, купить поликарбонат, поликарбонат от производителя, поликарбонат прозрачный, поликарбонат сотовый, сотовый поликарбонат, монолитный поликарбонат, каркасы теплиц, поликарбонат цветной, поликарбонат коричневый, поликарбонат красный">
     <meta name="country" content="RU">
+        <!-- Yandex.RTB -->
+    <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
+    <div id="preloader">
+        <!-- <div class="spinner"></div> -->
+        <lottie-player src="/lottie/Animation.json" background="transparent"  speed="1"  style="width: 200px; height: 200px;" loop autoplay></lottie-player>
+    </div>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
@@ -194,6 +202,17 @@
         </article>
 
     </main>
+        <!-- Yandex.RTB R-A-6542124-1 -->
+    <script>
+    window.yaContextCb.push(()=>{
+    	Ya.Context.AdvManager.render({
+    		"blockId": "R-A-6542124-1",
+    		"type": "floorAd",
+    		"platform": "touch"
+    	})
+    })
+    </script>
+  
     <footer>
 
         <div class="footer-container">
@@ -255,6 +274,7 @@
     </footer>
 
     <script src="scripts/index.js"></script>
+    <script src="/scripts/preloader.js"></script>
     <script class="stepform_Z8xLZU8 rnd_1460872188">
         (function (s, t, e, p, f, o, r, m) {
             s[t] = s[t] || {};
